# evs

./: .evsignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  clippy.toml  flake.nix  rustfmt.toml
src/: cli.rs  diff.rs  error.rs  lib.rs  main.rs  objects.rs  repo.rs  store.rs  util.rs
