[package]
name = "evs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rsahwe/evs"
description = "Ev source control"
license-file = "LICENSE.md"
keywords = [
    "cli",
    "terminal",
    "utility",
    "vcs",
]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.56", features = ["derive", "env"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
enable-ansi-support = "0.3.1"
flate2 = "1.1.9"
glob = "0.3.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
similar = { version = "2.7.0", features = ["bytes", "inline"] }
time = { version = "0.3.40", features = ["formatting"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
